--- a/indx.html
+++ b/indx.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<link rel="stylesheet" href="style.css">
-<body>
+  </head>
+  <link rel="stylesheet" href="style.css" />
+  <body>
     <h2>This is testing</h2>
-</body>
-<script src="main.js"></script>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio
+      aliquid deserunt accusantium. Neque molestias harum commodi quia minus
+      facilis ea adipisci earum, dicta nostrum voluptatibus quos molestiae quae
+      architecto nam.
+    </p>
+  </body>
+  <script src="main.js"></script>
 </html>
